k8s/kube-service/kong/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  labels:
    kong-sidecar-injection: disabled
