k8s/kube-service/kong/postgres-ingress-data-plane.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: kong
  name: kong-ingress-data-plane
  labels:
    app: kong-ingress-data-plane
spec:
  selector:
    matchLabels:
      app: kong-ingress-data-plane
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        k8s.konghq.com/sidecar-inject: "false"
      labels:
        app: kong-ingress-data-plane
    spec:
      containers:
      - name: kong-ingress-data-plane
        image: kong
        imagePullPolicy: IfNotPresent
        ports:
        - name: data-http
          containerPort: 8000
        - name: data-https
          containerPort: 8443
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  namespace: kong
  name: kong-ingress-data-plane
spec:
  type: NodePort
  ports:
  - name: kong-proxy-http
    port: 8000
    targetPort: 8000
    protocol: TCP
  - name: kong-proxy-https
    port: 8443
    targetPort: 8443
    protocol: TCP
  selector:
    app: kong-ingress-data-plane
